# budgie-screensaver

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  gnome-screensaver.doap  meson.build  meson_options.txt  mkrelease.sh
.github/workflows/: github-actions-test.yml
.tx/: config
data/: Makefile.am  budgie-screensaver-command.1  budgie-screensaver.1  meson.build  org.gnome.ScreenSaver.ForBudgie.service.in  us.getsol.budgie-screensaver.service.in
doc/: Makefile.am  budgie-screensaver.xml.in  dbus-interface.xml
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  budgie-screensaver.pot  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  (+65 more)
savers/: Makefile.am  gs-theme-window.c  popsquares.c  slideshow.c
scripts/: updatePot.sh  updateTranslations.sh
src/: Makefile.am  budgie-screensaver.desktop.in.in  debug-screensaver.sh  gnome-screensaver-command.c  gnome-screensaver-dialog.c  gnome-screensaver-preferences.c  gnome-screensaver.c  gnome-screensaver.h  gs-auth-bsdauth.c  gs-auth-pam.c  gs-auth.h  gs-bus.h  gs-debug.c  gs-debug.h  gs-fade.c  gs-fade.h  gs-grab-x11.c  gs-grab.h  gs-job.c  gs-listener-dbus.c  gs-listener-dbus.h  gs-lock-plug.c  gs-lock-plug.h  gs-manager.c  gs-manager.h  gs-monitor.c  gs-monitor.h  gs-prefs.c  gs-prefs.h  gs-theme-manager.h  gs-watcher-x11.c  gs-watcher.h  gs-window-x11.c  gs-window.h  meson.build  setuid.c  setuid.h  subprocs.c  subprocs.h  test-window.c
