i18n = import('i18n')

# for i in *.po; do echo "    '$i'," | sed 's/\.po//'; done
langs = [
    'af',
    'an',
    'ar',
    'as',
    'ast',
    'be@latin',
    'be',
    'bg',
    'bn_IN',
    'bn',
    'br',
    'bs',
    'ca',
    'ca@valencia',
    'crh',
    'cs',
    'cy',
    'da',
    'de',
    'dz',
    'el',
    'en_CA',
    'en_GB',
    'en@shaw',
    'eo',
    'es',
    'et',
    'eu',
    'fa',
    'fi',
    'fr',
    'fur',
    'ga',
    'gd',
    'gl',
    'gu',
    'he',
    'hi',
    'hr',
    'hu',
    'id',
    'is',
    'it',
    'ja',
    'ka',
    'km',
    'kn',
    'ko',
    'ku',
    'lt',
    'lv',
    'mai',
    'mg',
    'mk',
    'ml',
    'mn',
    'mr',
    'ms',
    'my',
    'nb',
    'nds',
    'ne',
    'nl',
    'nn',
    'oc',
    'or',
    'pa',
    'pl',
    'ps',
    'pt_BR',
    'pt',
    'ro',
    'ru',
    'si',
    'sk',
    'sl',
    'sq',
    'sr@latin',
    'sr',
    'sv',
    'ta',
    'te',
    'th',
    'tr',
    'ug',
    'uk',
    'vi',
    'xh',
    'zh_CN',
    'zh_HK',
    'zh_TW',
]

# Stole this from gnome-twitch, ty TingPing
# https://github.com/vinszent/gnome-twitch/tree/master/po
i18n.gettext(meson.project_name(), languages : langs, args : [
    '--from-code=UTF-8',
    '--add-comments',
    '--package-name=' + meson.project_name(),
    '--package-version=' + meson.project_version(),
    '--keyword=_',
    '--keyword=N_',
    '--keyword=C_:1c,2',
    '--keyword=NC_:1c,2',
    '--keyword=g_dcgettext:2',
    '--keyword=g_dngettext:2,3',
    '--keyword=g_dpgettext2:2c,3',

    '--flag=N_:1:pass-c-format',
    '--flag=C_:2:pass-c-format',
    '--flag=NC_:2:pass-c-format',
    '--flag=g_dngettext:2:pass-c-format',
    '--flag=g_strdup_printf:1:c-format',
    '--flag=g_string_printf:2:c-format',
    '--flag=g_string_append_printf:2:c-format',
    '--flag=g_error_new:3:c-format',
    '--flag=g_set_error:4:c-format',
])
